[project]
name = "analyzer-tsumtsum"
version = "0.1.0"
description = "TsumTsum analyzer desktop app with PySide6."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6",
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4.9",
]

[project.scripts]
analyzer-tsumtsum = "app.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
